# Reposit-rio-Projetos

BibliotecaSonoraHaskell/: .project  BibliotecaSonoraHaskell.cabal
BibliotecaSonoraHaskell/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  .MusicaHasekk.hs.bwinfo  .MusicaHasekk.hs.bwusage  .MusicaHaskell.hs.bwinfo  .MusicaHaskell.hs.bwusage
BibliotecaSonoraHaskell/.dist-buildwrapper/src/Biblioteca/: .DefinicaoNotacao.hs.bwusage  .DefinicoesMusicais.hs.bwinfo  .DefinicoesMusicais.hs.bwusage  .Music.hs.bwinfo  .Music.hs.bwusage  .Musica.hs.bwinfo  .Musica.hs.bwusage  .MusicaHaskell.hs.bwinfo  .MusicaHaskell.hs.bwusage  .NotacaoMusical.hs.bwinfo  .NotacaoMusical.hs.bwusage  .Typedefs.hs.bwinfo  .Typedefs.hs.bwusage  Musica.hs
BibliotecaSonoraHaskell/.dist-buildwrapper/src/BibliotecaMusical/: .MusicaHaskell.hs.bwinfo  .MusicaHaskell.hs.bwusage
BibliotecaSonoraHaskell/.dist-buildwrapper/src/Definicoes/: .Audio.hs.bwinfo  .Audio.hs.bwusage  .DefinicoesAudio.hs.bwinfo  .Frequencias.hs.bwinfo  .Frequencias.hs.bwusage  .NotacaoMusical.hs.bwinfo  .NotacaoMusical.hs.bwusage  Audio.hs  Frequencias.hs
BibliotecaSonoraHaskell/.dist-buildwrapper/src/DefinicoesAudio/: .DefinicoesAudio.hs.bwinfo  .DefinicoesAudio.hs.bwusage
BibliotecaSonoraHaskell/.dist-buildwrapper/src/MusicaHaskell/: .MusicaHaskell.bwinfo  .MusicaHaskell.hs.bwusage  .Typedefs.hs.bwinfo  .Typedefs.hs.bwusage
BibliotecaSonoraHaskell/src/: Main.hs
BibliotecaSonoraHaskell/src/Biblioteca/: Typedefs.hs
BibliotecaSonoraHaskell/src/Sintese/: Aditiva.hs
(+21 files in other folders)
